Projects: fix layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .projects-grid {
     display: grid;
     grid-template-columns: repeat(7, calc(100% / 7 - 2px));
-    grid-auto-rows: 400px;
+    grid-auto-rows: auto;
     grid-auto-flow: dense;
     grid-gap: 2px;
     background: black;
